--- a/static/css/slider.css
+++ b/static/css/slider.css
@@ -35,4 +35,23 @@
 .slider:hover {
     opacity: 1; /* Fully shown on mouse-over */
 }
+body,
+html {
+  margin: 0px;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+#bodymovin {
+  background-color: #333;
+  width: 100%;
+  height: 100%;
+  /*width:800px;
+            height:500px;*/
+  display: block;
+  overflow: hidden;
+  transform: translate3d(0, 0, 0);
+  margin: auto;
+}
 
